# mtracker

./: CMakeLists.txt  README.md  package.xml
include/: automatic_controller.h  controls_scaling.h  data_recorder.h  manual_controller.h  mtracker.h  obstacle_controller.h  reference_generator.h  serial.h  simulator.h  state_estimator.h  trajectories.h  trajectory_recorder.h
include/mtracker/: Robot.hpp  Serial.hpp
launch/: automatic_controller_node.launch  manual_controller_node.launch  mtracker.launch  mtracker_all.launch  mtracker_automatic.launch  mtracker_manual.launch  mtracker_manual_scanner.launch  mtracker_node.launch  mtracker_obstacle_controller.launch  mtracker_remote.launch  mtracker_with_manual_control.launch  reference_generator_node.launch  simulator.launch  simulator_automatic.launch  simulator_manual.launch  simulator_node.launch  simulator_with_automatic_control.launch  simulator_with_manual_control.launch
resources/: Network Config Info.txt  mtracker.rviz
scripts/: mtracker_env.sh  mtracker_start.sh  mtracker_ui_env.sh  mtracker_ui_start.sh  mtracker_update.sh
src/: automatic_controller.cpp  controller.cpp  controls_scaling.cpp  data_recorder.cpp  manual_controller.cpp  mtracker.cpp  mtracker_joy.cpp  obstacle_controller.cpp  reference_generator.cpp  rs232.c  simulator.cpp  state_estimator.cpp  trajectory_recorder.cpp
srv/: ManualGains.srv  MaxWheelRate.srv  ObstacleControllerParams.srv  Params.srv  PlayPause.srv
