<?xml version="1.0"?>
<package format="2">
  <name>mtracker</name>
  <version>1.0.0</version>
  <description>The MTracker driver package</description>
  <maintainer email="inz.mateusz.przybyla@gmail.com">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>joy</depend>
  <depend>obstacle_detector</depend>

  <export>
  </export>
</package>
